--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,10 @@ header p {
 
 header img.header-image {
     display: block;
-    max-width: 150px; /* Set a reasonable maximum width */
+    max-width: 300px; /* Set a reasonable maximum width */
     width: 100%; /* Ensure it scales with the container */
     height: auto; /* Maintain aspect ratio */
-    margin: 0 auto; /* Center the image horizontally */
+    margin: 50px auto; /* Center the image horizontally */
     border-radius: 50%;
     margin-bottom: 1.5em; /* Adjust margin below the image */
 }
