--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ footer {
 .resume-section h2 {
     margin-top: 0;
     font-size: 2em; /* Adjust section heading size */
+    border-radius: 168px;
 }
 
 .resume-section h3 {
