--- a/styles.css
+++ b/styles.css
@@ -76,10 +76,12 @@ footer {
     background-color: white;
     border: 1px solid #adc3ff;
     padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 170px;
+    margin: 1rem auto; /* Center horizontally and add vertical margin */
+    border-radius: 8px; /* Adjust border radius */
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
     text-align: center; /* Center text in resume sections */
+    width: 80%; /* Set width to 80% of its container */
+    max-width: 600px; /* Set a maximum width for larger screens */
 }
 
 /* Resume Section Heading Styling */
